# film-manager-desktop-app

./: CMakeLists.txt  README.md  main.cpp
domain/: Film.cpp  Film.h
exceptions/: FilmContainerServiceException.h  FilmRepositoryException.h  FilmServiceException.h  FilmValidatorException.h
repository/: FilmRepoFile.h  FilmRepoLab.h  FilmRepository.cpp  FilmRepository.h  FilmRepositoryAbstract.h
service/: FilmContainerService.cpp  FilmContainerService.h  FilmService.cpp  FilmService.h  undo.h
test/: TestModule.cpp  TestModule.h
ui/: CosCRUDGUI.h  CosReadOnlyGUI.h  FilmGUI.cpp  FilmGUI.h  MyListModel.h  observer.h
validator/: FilmValidator.cpp  FilmValidator.h
